-Added a meta tag to attempt to solve the overflowing issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,5 +50,3 @@ a {
     }
   }
 }
-
-html, body { width: 100vw; height: 100vh; overflow: hidden;}
